--- a/Views/Workout/CreateRoutine.cshtml
+++ b/Views/Workout/CreateRoutine.cshtml
@@ -169,6 +169,7 @@
                             </tbody>
                         </table>
                         <input type="hidden" name="WorkoutDays[${workoutDays.length}].DayId" value="${selectedDay}" />
+                        <input type="hidden" name="WorkoutDays[${workoutDays.length}].DayName" value="${selectedDayText}" /> <!-- Add DayName -->
                         <button type="button" class="btn btn-secondary" onclick="openAddExerciseModal(${selectedDay}, ${workoutDays.length})">Add Exercise</button>
                     </div>
                 </div>
@@ -183,6 +184,7 @@
                 Exercises: []
             });
         }
+
 
         function openAddExerciseModal(dayId, dayIndex) {
             $('#dayId').val(dayId);  // Store the dayId
@@ -213,6 +215,7 @@
                 // Add exercise to the workoutDays array for tracking
                 day.Exercises.push({
                     ExerciseId: exerciseId,
+                    ExerciseName: exerciseName,  // Add ExerciseName here for tracking
                     Sets: sets,
                     Reps: reps,
                     Weight: weight,
@@ -226,7 +229,8 @@
                         <td><input type="number" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].Sets" value="${sets}" class="form-control" /></td>
                         <td><input type="number" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].Reps" value="${reps}" class="form-control" /></td>
                         <td><input type="number" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].Weight" value="${weight}" class="form-control" /></td>
-                        <td><input type="hidden" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].ExerciseId" value="${exerciseId}" />
+                        <td style="min-width: 150px;"><input type="hidden" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].ExerciseId" value="${exerciseId}" />
+                            <input type="hidden" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].ExerciseName" value="${exerciseName}" /> <!-- Add ExerciseName -->
                             <input type="hidden" name="WorkoutDays[${dayIndex}].Exercises[${exerciseIndex}].Notes" value="${notes}" />
                             ${notes ? notes : ''}
                         </td>
@@ -240,6 +244,7 @@
             // Hide the Add Exercise modal after saving
             $('#addExerciseModal').modal('hide');
         }
+
 
         function submitNewExercise() {
             var exerciseName = $('#exerciseName').val();
