--- a/Views/Workout/CreateRoutine.cshtml
+++ b/Views/Workout/CreateRoutine.cshtml
@@ -57,6 +57,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                    <!-- Move the openCreateExerciseModal() link to ensure it doesn't trigger validation -->
+                    <button type="button" class="btn btn-link" style="color: var(--bs-link-color);" onclick="openCreateExerciseModal()">+ Create New Exercise</button>
                 <form id="addExerciseForm">
                     <input type="hidden" id="dayId" name="dayId" />
                     <div class="form-group">
@@ -64,11 +66,11 @@
                         <select id="exerciseId" name="exerciseId" class="form-control">
                             <option value="">-- Select Exercise --</option>
                             @foreach (var exercise in ViewBag.Exercises)
+
                             {
                                 <option value="@exercise.ExerciseId">@exercise.Name</option>
                             }
                         </select>
-                        <button type="button" class="btn btn-link" style="color: var(--bs-link-color);" onclick="openCreateExerciseModal()">+ Create New Exercise</button>
                     </div>
 
                     <div class="form-group">
@@ -193,6 +195,17 @@
             // Add the day index to the modal's Save button
             $("#addExerciseForm").find("button[type='button']").attr("onclick", `saveExercise(${dayIndex}, ${dayId})`);
         }
+
+        // Function to open the modal for creating a new exercise
+        function openCreateExerciseModal() {
+            $('#createExerciseModal').modal('show');
+            $('#addExerciseModal').modal('hide'); // Hide the 'AddExercise' modal to avoid clutter
+        }
+
+        // If the `Close` button in the 'Create New Exercise' modal is clicked, show the 'Add Exercise' Modal
+        $("#newExerciseClose").click(function () {
+            $('#addExerciseModal').modal('show');
+        })
 
         function saveExercise(dayIndex, dayId) {
             var exerciseId = $('#exerciseId').val();
