fixed adding newly created exercises to routine #fixed create exercise modal on routine creation page

--- a/Views/ExerciseTracking/StartRoutine.cshtml
+++ b/Views/ExerciseTracking/StartRoutine.cshtml
@@ -218,6 +218,7 @@
                     $('#exerciseId').append(new Option(newExercise.name, newExercise.exerciseId));
                     // Automatically select the new exercise
                     $('#exerciseId').val(newExercise.exerciseId);
+                    $("#addExerciseModal").modal('show');
                 },
                 error: function () {
                     alert("An error occurred while creating the exercise. Please try again.");
